# ChangeLog for dev-perl/XML-Writer
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/XML-Writer/ChangeLog,v 1.101 2013/09/03 06:18:13 patrick Exp $

*XML-Writer-0.623.0 (03 Sep 2013)

  03 Sep 2013; Patrick Lauer <patrick@gentoo.org> +XML-Writer-0.623.0.ebuild:
  Bump

  05 Dec 2012; Fabian Groffen <grobian@gentoo.org> XML-Writer-0.615.0.ebuild:
  Marked ~x86-linux, bug #444950

  01 Sep 2012; Fabian Groffen <grobian@gentoo.org> XML-Writer-0.615.0.ebuild:
  Marked ~ppc-aix, bug #432288

  24 Jun 2012; Torsten Veller <tove@gentoo.org> metadata.xml:
  Update CPAN upstream info

  31 Mar 2012; Torsten Veller <tove@gentoo.org> -XML-Writer-0.611.ebuild,
  -XML-Writer-0.612.0.ebuild, -XML-Writer-0.614.0.ebuild:
  Cleanup

  18 Mar 2012; Raúl Porcel <armin76@gentoo.org> XML-Writer-0.615.0.ebuild:
  alpha/ia64/s390/sh/sparc stable wrt #404339

  03 Mar 2012; Markus Meier <maekke@gentoo.org> XML-Writer-0.615.0.ebuild:
  arm stable, bug #404339

  03 Mar 2012; Brent Baude <ranger@gentoo.org> XML-Writer-0.615.0.ebuild:
  Marking XML-Writer-0.615.0 ppc64 for bug 404339

  01 Mar 2012; Brent Baude <ranger@gentoo.org> XML-Writer-0.615.0.ebuild:
  Marking XML-Writer-0.615.0 ppc for bug 404339

  24 Feb 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  XML-Writer-0.615.0.ebuild:
  x86 stable wrt bug #404339

  19 Feb 2012; Agostino Sarubbo <ago@gentoo.org> XML-Writer-0.615.0.ebuild:
  Stable for amd64, wrt bug #404339

  18 Feb 2012; Jeroen Roovers <jer@gentoo.org> XML-Writer-0.615.0.ebuild:
  Stable for HPPA (bug #404339).

*XML-Writer-0.615.0 (24 Jan 2012)

  24 Jan 2012; Torsten Veller <tove@gentoo.org> +XML-Writer-0.615.0.ebuild:
  Version bump

*XML-Writer-0.614.0 (08 Jan 2012)

  08 Jan 2012; Torsten Veller <tove@gentoo.org> +XML-Writer-0.614.0.ebuild:
  Version bump

  04 Sep 2011; Torsten Veller <tove@gentoo.org> -XML-Writer-0.612.ebuild:
  Cleanup

*XML-Writer-0.612.0 (27 Aug 2011)
