@@ -1,6 +1,16 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST XML-Writer-0.615.tar.gz 27418 SHA256 f05384f7b0686cce9e83fa5f16f3603e3805c969ff88e60c2d7f08183a10f496 SHA512 be46e51b0c31e4887df778f6d0fbd830118f252d00c89ad3b67c32de210bf29f008c227d1519af1f4b5245bef5648917df1cf6e38fa894fb795a6250ceff8ca1 WHIRLPOOL d6c8f21e52bf38eb6d8b62100e62b9964684edb09f511ff49b2f7593edec7a0866f95422d8f07715fe246980fc7a687af116cfae99f3c55927cd5069acedf3c0
 DIST XML-Writer-0.623.tar.gz 28683 SHA256 0b409ab1d7b4fbcf5afd47df3d09bac16cef521953fb04158dc418ca8ef56727 SHA512 5fe257ad92f3e557fda376b0bee1525c42c1a3c653eca756828d8407482b3a771cbc3f83b94585f02c8f4eb6d2c0fcf6ae885c1ed608af71989c52c061000d0f WHIRLPOOL 483cbb383401c4075cf7eda00c8d16419205017a724b05033178fa428c237c8c73fbf30b503406c0374272d5058ec38aab61078756b57436d6627e44fc128858
 EBUILD XML-Writer-0.615.0.ebuild 588 SHA256 1a7b6457e0b1a36b623c363a442749112d519ddc3da8f553d15fbd395df7f706 SHA512 1f15bb8fd9f24fd6c636bcb1f7bba72d421833d99c39a05eb3f3e82932ca38d356152745175f87032044b98093f0063b1596da51c475e6f272022986e0a227cd WHIRLPOOL 54a24c1d0f0cdf06b15ec9295f4e819589d7b64186fe7032487ca47b8a53183757a1198836a2bda7bfa5cac89de72fcdfc4aff77880a824912788000a3b03f8e
-EBUILD XML-Writer-0.623.0.ebuild 598 SHA256 40057380505e0b3d24ea57bfa4670f8ac1f42ea0aa4314735bee0620eb41dd4a SHA512 7b3c1dac3a4fab6b75d895b0fb5e9adc03b9c16c6d8cf808e28bed78ab8b4c4a444f30f48b1be1701a448393f4af82c46aae9a2b311eab1ef659068580a9b18c WHIRLPOOL ce4d7eea3e9e6f7eb6d9023987d44cf8f0e0d2f3ab76f5db50f983a72106029710f2e1ca8aeab02959ba391e4e10f4a5b512ef2da041123d133357f490b28098
-MISC ChangeLog 11813 SHA256 9efb5644ded1b9b33e423ce2b8fdc4398a79dde683806c03cfb5b5c3d1098b80 SHA512 5d44f192e28e73f2fd2424754782e54f06795fed8e69b41edc2e732d99a245e60edfc520ab7f8cf9856606ece60ef8bd35120dfcbe470a370f2184105656dc7f WHIRLPOOL cb493b4bf7423ed6bad3748e6e589fdbb86cd5373bace99e01d148ce24c036831b6a6901133e88a22abdf94251f90af22420c3fec7335bb01f4327af92d1e66b
+EBUILD XML-Writer-0.623.0.ebuild 596 SHA256 30fbf4c61a9907f2e5ead57aae10482cb17be0b7c2326a7932817719370913e4 SHA512 a443431b6ff154aad2b2a22f0f440096561d3a06fbab2c883c87c1cbc83129e2c3f7a9d83019d5e13c8125259ab8dd92162857241600d69fe2905e47c9ad0429 WHIRLPOOL 14b7dc9a1302490f5cd640f444be0f184d9aed24bd9ddae5c0e18abfafa6133011f1f64a7f02b37ccb9d37937f5ca2c9547875c03c6e1b4409696b7c998ae900
+MISC ChangeLog 11921 SHA256 23b7ad6ca88505005316a2f8b0e33aa9373041947117f50a6c34c2ec28c1eedf SHA512 0b39e0594d9bb8d1ff1a9c0c8d4d71cf60ee790bb417b73d6b60180006484f3ffc0bf55e38e00b96bb67a9a853e08b60ebe842880a27fb4fac41418625c6bb11 WHIRLPOOL e343bb8f3ef9fab95fb3b3c14fad18c379f8a51c7b5a0118d63a8ee1a056383de6ab75060fd5ee4d611bb7c79a660d597126939b4d6169bf4eced90a6f1120ec
 MISC metadata.xml 504 SHA256 7effad498a0f2b1f633cd99a846df312e6ce202f9054194295edd0fe6b7dcbe7 SHA512 98699c21f57cbd5ac894ffa1e39f05635d1cb2cd76e8b8bc09f10dbb34de50bd8d650650b0dbea4007fb8917e7f3c719cc71fc9185aeb9fec09402e86eb95523 WHIRLPOOL 7f1db4d157113fd37a42afa519bf678562ddf01f3fb52fa67fc3f820120249846a6f5f789b6538c45891669bb98ef7b9414c7dbf04c12362f65efbfd1c079de9
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.22 (GNU/Linux)
+
+iEYEAREIAAYFAlL6RPwACgkQL46suuyRem125QCgjg+4C30gpprpnAVUrHhXwSwC
+JZUAnRdbV1IpjrqvroZIstUv0mX1ymKe
+=nFO4
+-----END PGP SIGNATURE-----
