@@ -1,6 +1,6 @@
-# Copyright 1999-2013 Gentoo Foundation
+# Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/XML-Writer/Attic/XML-Writer-0.623.0.ebuild,v 1.1 2013/09/03 06:18:13 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/XML-Writer/Attic/XML-Writer-0.623.0.ebuild,v 1.2 2014/02/11 15:42:51 hattya Exp $
 
 EAPI=4
 
@@ -12,7 +12,7 @@ DESCRIPTION="XML Writer Perl Module"
 
 LICENSE="MIT"
 SLOT="0"
-KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~ppc-aix ~x86-linux ~x86-solaris"
+KEYWORDS="~alpha ~amd64 ~arm ~hppa ia64 ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~ppc-aix ~x86-linux ~x86-solaris"
 IUSE="test"
 
 RDEPEND=""
