@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/XML-Writer
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/XML-Writer/ChangeLog,v 1.101 2013/09/03 06:18:13 patrick Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/XML-Writer/ChangeLog,v 1.102 2014/02/11 15:42:51 hattya Exp $
+
+  11 Feb 2014; Akinori Hattori <hattya@gentoo.org> XML-Writer-0.623.0.ebuild:
+  ia64 stable wrt bug #495524
 
 *XML-Writer-0.623.0 (03 Sep 2013)
 
